# anchor-litesvm-template

./: .gitignore  Anchor.toml  README.md  codama.json  mise.toml  package.json
.cargo/: config.toml
migrations/: deploy.ts
programs/litesvm-template/: Cargo.toml
programs/litesvm-template/src/: lib.rs
programs/litesvm-template/tests/: test_initialize.rs
