[package]
name = "litesvm-template"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "litesvm_template"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.0"

[dev-dependencies]
litesvm = "0.11.0"
solana-keypair = "3.1.2" # 3.1.0 
solana-address = "2.5.0" #2.0.0
solana-signer = "3.0.0" #3.0.0
solana-message = "3.0.1" #4.0.0
solana-transaction = "3.0.0" #4.0.0
solana-instruction = "3.3.0" #3.0.0

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
